--- a/ios/Podfile
+++ b/ios/Podfile
@@ -16,7 +16,8 @@ end
 
 target 'edurevision24' do
   config = use_native_modules!
-
+  use_frameworks! :linkage => :static
+  $RNFirebaseAsStaticFramework = true
   use_react_native!(
     :path => config[:reactNativePath],
     # An absolute path to your application root.
