--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@react-native-firebase/app": "^23.1.2",
     "@react-native-firebase/messaging": "^23.1.2",
     "react": "19.0.0",
-    "react-native": "0.78.0"
+    "react-native": "0.78.0",
+    "react-native-reanimated": "^3.19.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
