--- a/package.json
+++ b/package.json
@@ -12,9 +12,17 @@
   "dependencies": {
     "@react-native-firebase/app": "^23.1.2",
     "@react-native-firebase/messaging": "^23.1.2",
+    "@react-navigation/bottom-tabs": "^7.4.6",
+    "@react-navigation/drawer": "^7.5.7",
+    "@react-navigation/elements": "^2.6.3",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.25",
     "react": "19.0.0",
     "react-native": "0.78.0",
-    "react-native-reanimated": "^3.19.1"
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-reanimated": "^3.19.1",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.15.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
