--- a/package.json
+++ b/package.json
@@ -17,12 +17,21 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
+    "i": "^0.3.7",
+    "lottie-react-native": "^7.3.2",
+    "moment": "^2.30.1",
+    "npm": "^11.5.2",
     "react": "19.0.0",
     "react-native": "0.78.0",
+    "react-native-blob-util": "^0.22.2",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-reanimated": "^3.19.1",
     "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "^4.15.3"
+    "react-native-screens": "^4.15.3",
+    "react-native-share": "^12.2.0",
+    "react-native-swiper": "^1.6.0",
+    "react-native-swiper-flatlist": "^3.2.5",
+    "react-native-toast-message": "^2.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
