--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-native-share": "^12.2.0",
     "react-native-swiper": "^1.6.0",
     "react-native-swiper-flatlist": "^3.2.5",
-    "react-native-toast-message": "^2.3.3"
+    "react-native-toast-message": "^2.3.3",
+    "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
