--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@notifee/react-native": "^9.1.8",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-clipboard/clipboard": "^1.16.3",
+    "@react-native-community/datetimepicker": "^8.4.4",
     "@react-native-firebase/app": "^23.1.2",
     "@react-native-firebase/messaging": "^23.1.2",
     "@react-navigation/bottom-tabs": "^7.4.6",
@@ -32,7 +36,11 @@
     "react-native-swiper": "^1.6.0",
     "react-native-swiper-flatlist": "^3.2.5",
     "react-native-toast-message": "^2.3.3",
-    "react-native-vector-icons": "^10.3.0"
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-video": "^6.16.1",
+    "react-native-webview": "^13.16.0",
+    "react-native-youtube-iframe": "^2.4.1",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
