--- a/package.json
+++ b/package.json
@@ -22,11 +22,10 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
+    "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.11.0",
     "lottie-react-native": "^7.3.2",
     "moment": "^2.30.1",
-    "npm": "^11.5.2",
-    "pusher-js": "^8.4.0",
     "react": "19.0.0",
     "react-native": "0.78.0",
     "react-native-blob-util": "^0.22.2",
@@ -38,6 +37,7 @@
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-otp-entry": "^1.8.5",
     "react-native-paper": "^5.14.5",
+    "react-native-permissions": "^5.4.2",
     "react-native-reanimated": "^3.19.1",
     "react-native-reanimated-carousel": "^4.0.3",
     "react-native-render-html": "^6.3.4",
