--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "19.0.0",
     "react-native": "0.78.0",
     "react-native-blob-util": "^0.22.2",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-image-viewing": "^0.2.2",
@@ -43,7 +44,7 @@
     "react-native-render-html": "^6.3.4",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "^4.15.3",
+    "react-native-screens": "^4.16.0",
     "react-native-share": "^12.2.0",
     "react-native-swiper": "^1.6.0",
     "react-native-swiper-flatlist": "^3.2.5",
@@ -52,6 +53,7 @@
     "react-native-video": "^6.16.1",
     "react-native-webview": "^13.16.0",
     "react-native-youtube-iframe": "^2.4.1",
+    "react-navigation": "^5.0.0",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
