--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native": "0.78.0",
     "react-native-blob-util": "^0.22.2",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-image-viewing": "^0.2.2",
@@ -43,6 +44,7 @@
     "react-native-reanimated-carousel": "^4.0.3",
     "react-native-render-html": "^6.3.4",
     "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
     "react-native-share": "^12.2.0",
